--- a/_posts/2025-09-04-rails-8-1-beta-1.markdown
+++ b/_posts/2025-09-04-rails-8-1-beta-1.markdown
@@ -86,7 +86,7 @@ class LogSubscriber
 end
 ```
 
-Active Job Continuations was lead by Adrianna Chang from [Shopify](https://shopify.com).
+Structured Event Reporting was lead by Adrianna Chang from [Shopify](https://shopify.com).
 
 ## Local CI
 
