Add missing ApplicationJob inheritance in Rails 8.1 Beta1 article

--- a/_posts/2025-09-04-rails-8-1-beta-1.markdown
+++ b/_posts/2025-09-04-rails-8-1-beta-1.markdown
@@ -16,7 +16,7 @@ Long-running jobs can now be broken into discrete steps that allow execution to 
 Example:
 
 ```ruby
-class ProcessImportJob
+class ProcessImportJob < ApplicationJob
   include ActiveJob::Continuable
 
   def perform(import_id)
